# osm-data-anomaly-detection

./: .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: CMakeLists.txt  odad-find-colocated-nodes.cpp  odad-find-multipolygon-problems.cpp  odad-find-orphans.cpp  odad-find-relation-problems.cpp  odad-find-unusual-tags.cpp  odad-find-way-problems.cpp  outputs.hpp  utils.hpp
